--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Update Piala Dunia",
-    "short_name": "UPD",
+    "short_name": "update wc",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
